--- a/src/views/casinos/index.erb
+++ b/src/views/casinos/index.erb
@@ -1,19 +1,23 @@
 <% @casinos.each do |casino| %>
 <div class="casino">
-  casino.name
-  <% casino.rating.each do |stars| %>
+  <%=casino['name'] %>
+  <% (0..casino['rating']).each do |_| %>
     <div class="star">
-      <p>star</p>
+            <p>star</p>
     </div>
   <% end %>
 
-  <img src="<%=casino.logo%>" alt="<%=casino.name %>\'s logo">
+  <img src="<%=casino['logo_filepath']%>" alt="<%=casino['name'] %>'s logo">
 
-  <% casino.cats.each do |cats| %>
-  <div class="cats">
-    <p><%=cats %></p>
-  </div>
+  <%puts "web info" %>
+  <%p @casinos_cats %>
+
+  <%p casino['id'] %>
+
+  <% @casinos_cats[casino['id'].to_s].each do |cats| %>
+    <div class="cats">
+      <p><%=cats %></p>
+    </div>
   <% end %>
-
 </div>
 <% end %>
