--- a/src/views/layout.erb
+++ b/src/views/layout.erb
@@ -13,6 +13,7 @@
         <a href="casinos/index.erb">Kasino jämförare</a>
         <a href="users/index.erb">Log in</a>
         <a href="users/signin.erb">Sign in</a>
+        <a href="casinos/new">Add kasino</a>
     </header>
     <%= yield %>
 </body>
