--- a/src/views/casinos/edit.erb
+++ b/src/views/casinos/edit.erb
@@ -2,34 +2,33 @@
 Use this as edit page as well
 -->
 <form action="/casinos" method="post">
-  <label>
     Kasino namn
     <br/>
-    <input type="text" name="casino_name" required/>
+  <input type="text" name="casino_name" value="<%=@casino[0]['name'] %>" required/>
     <br/>
   </label>
   <label>
     Vinst statistik
     <br/>
-    <input type="text" name="win_stats" required/>
+    <input type="text" name="win_stats" value="<%=@casino[0]['win_stats'] %>" required/>
     <br/>
   </label>
   <label>
     Omsättningskrav
     <br/>
-    <input type="number" name="turnover" required/>
+    <input type="number" name="turnover" value="<%=@casino[0]['turnover'] %>" required/>
     <br/>
   </label>
   <label>
     Logga som viss filtyp(Lista ut vilken)
     <br/>
-    <input type="text" name="logo_filepath" />
+    <input type="text" name="logo_filepath" value="<%=@casino[0]['logo_filepath'] %>" />
     <br/>
   </label>
   <label>
     Rating
     <br/>
-    <input type="text" name="Rating" required/>
+    <input type="text" name="Rating" value="<%=@casino[0]['rating'] %>" required/>
     <br/>
   </label>
   <label>
@@ -37,6 +36,10 @@ Use this as edit page as well
     Och en knapp för att ta bort kategorin
     Ladda om sidan om man lägger till eller tar bort
     <br/>
+    <% @casino.each do |casino| %>
+      <%=casino['name_cats'] %>
+      <br/>
+    <% end %>
     <input list="cats" type="text" name="cats" required/>
     <br/>
   </label>
