--- a/src/views/layout.erb
+++ b/src/views/layout.erb
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel=stylesheet href="/css/style.css">
+    <script src="/js/show_form.js"></script>
 </head>
 <body>
     <header>
         <!-- Add if cases depending on who is logged in-->
         <a href="casinos/index.erb">Admin stuff</a>
         <a>Account</a>
-        <a href="casinos/index.erb">Kasino jämförare</a>
-        <a href="users/index.erb">Log in</a>
-        <a href="users/signin.erb">Sign in</a>
-        <a href="casinos/new">Add kasino</a>
+        <a href="/">Kasino jämförare</a>
+        <a href="/users">Log in</a>
+        <a href="/users/new">Sign in</a>
+        <a href="/casinos/new">Add kasino</a>
+        <%if @user_name.nil? %>
+            <a>USER <%= @user_name %></a>
+        <%end %>
     </header>
     <%= yield %>
 </body>
