--- a/src/views/users/signin.erb
+++ b/src/views/users/signin.erb
@@ -1,4 +1,4 @@
-<form action="/users" method="post">
+<form action="/users/new" method="post">
   <label for="name">Name:</label> <br>
   <input type="text" id="name" name="username" required>
 
