--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,3 +1,13 @@
 body {
+    margin: 0;
     font-family: "Comic Sans MS", sans-serif;
+}
+
+header {
+    height: 10vh;
+    width: 100vw;
+    background-color: dimgray;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
