--- a/src/views/users/signin.erb
+++ b/src/views/users/signin.erb
@@ -1,4 +1,7 @@
 <form action="/users/new" method="post">
+
+  <%#Ska inte input vara i labeln? känns som jag var lite hög när jag skrev den här %>
+
   <label for="name">Name:</label> <br>
   <input type="text" id="name" name="username" required>
 
