--- a/src/views/users/signin.erb
+++ b/src/views/users/signin.erb
@@ -3,22 +3,22 @@
   <%#Ska inte input vara i labeln? känns som jag var lite hög när jag skrev den här %>
 
   <label for="name">Name:</label> <br>
-  <input type="text" id="name" name="username" required>
+  <input type="text" id="name" name="username">
 
   <br>
 
   <label for="email">Email:</label> <br>
-  <input type="email" id="email" name="email" required>
+  <input type="email" id="email" name="email">
 
   <br>
 
   <label for="password">Password:</label> <br>
-  <input type="password" id="password" name="password" required>
+  <input type="password" id="password" name="password">
 
   <br>
 
   <label for="re_password">Type password again:</label> <br>
-  <input type="password" id="re_password" name="re_password" required>
+  <input type="password" id="re_password" name="re_password">
 
   <br>
 
